crates/cyrus-core/tests/ui/fail/divide_by_zero.stderr
error[E0277]: cannot divide `F64<Pos>` by `F64<cyrus_core::types::Zero>`
  --> tests/ui/fail/divide_by_zero.rs:14:21
   |
14 |     let _result = p / z;
   |                     ^ no implementation for `F64<Pos> / F64<cyrus_core::types::Zero>`
   |
   = help: the trait `Div<F64<cyrus_core::types::Zero>>` is not implemented for `F64<Pos>`
   = help: the following other types implement trait `Div<Rhs>`:
             `F64<Pos>` implements `Div<F64<MinusOne>>`
             `F64<Pos>` implements `Div<F64<One>>`
             `F64<Pos>` implements `Div<F64<cyrus_core::Neg>>`
             `F64<Pos>` implements `Div`
